--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "debug": "^2.5.2",
     "express": "^4.14.0",
     "helmet": "^3.4.0",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "node-uuid": "^1.4.7"
   },
   "devDependencies": {
     "chai": "^3.5.0",
