--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.14.0",
     "helmet": "^3.4.0",
     "morgan": "^1.7.0",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
